Spixi/Resources/Raw/html/css/spixiui-light.css
/* ... */
/* Self-hosted Inter Fonts */
@font-face {
    font-family: 'Inter';
    src: url('../fonts/Inter-Regular.woff2') format('woff2');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Inter';
    src: url('../fonts/InterDisplay-SemiBold.woff2') format('woff2');
    font-weight: semibold;
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'Inter';
    src: url('../fonts/Inter-Bold.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}

/* Global Font Family */
body, html, * {
    font-family: 'Inter', sans-serif;
}

/*
 * SPIXI User Interface Kit
 * https://ixian.io | https://spixi.io
 */

/* Fonts */
@font-face {
    /* The original Roboto declarations have been removed */
}

/* General */
body, html, * {
    /* Now uses Inter instead of Roboto */
    font-family: 'Inter', sans-serif;
}

a,
a:hover,
a:active {
    text-decoration: none;
}

#wrap {

    padding: 0 0;

    /* Prevent overscroll bounce  */
    -webkit-overflow-scrolling: touch;

    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;

    background: var(--colors-surface-01);
}

img.emoji {
    max-width: 20pt !important;
    max-height: 20pt !important;
    object-fit: contain;
    margin: 0 .05em 0 .1em;
    vertical-align: -0.5em;
}

.break-word {
    word-wrap: break-word;
}

.spixi-center {
    text-align: center;
}

.spixi-italic {
    font-style: normal;
}

.spixi-bold {
    font-weight: bold;
}

.ixicash-icon {
    transform: scale(1.4);
    width: 16px;
    margin-bottom: 1px !important;
}

.spixi-external-link {
    color: var(--colors-text-link);
    display: inline-block;
    cursor: pointer;
    overflow-wrap: break-word;
    word-break: break-all;
}

.spixi-external-link:hover {
    color: var(--colors-text-action-focus);
    text-decoration: underline;
    cursor: pointer;
}


/* Placeholders */
.spixi-holder-20 {
    width: 100%;
    height: 20px;
}

.spixi-holder-40 {
    width: 100%;
    height: 40px;
}

.spixi-holder-64 {
    width: 100%;
    height: 64px;
}

/* Toolbar */
.spixi-toolbar {
    width: 100%;
    height: 56px;
    position: fixed;
    z-index: 100;
    font-size: 20px;
    background: var(--colors-surface-brand-primary);
    color: var(--colors-text-on-action);
    display: table;
}

.spixi-toolbar.extended {
    height: 128px;
}

.spixi-toolbar.extended-main {
    height: 166px;
}

.spixi-toolbar.shadow {
    box-shadow: 0px 0px 0px #777;
}

.spixi-toolbar-row {
    height: 56px;
    display: table-row;
    align-items: center;
    justify-content: space-between;
}

.home.spixi-toolbar-row {
    display: flex;
}

.spixi-toolbar-row > div:nth-child(1) {
    z-index: 1;
    width: 50px;
    min-width: 50px;
    text-align: center;
    overflow: hidden;
    font-size: 24px;
}

.spixi-toolbar-row > div:nth-child(1):hover {
    cursor: pointer;
}

.spixi-toolbar-row > div:nth-child(2) {
    z-index: 0;
    box-sizing: border-box;
    text-align: left;
    max-width: 200px;
}

.spixi-toolbar-row > div:nth-child(3) {
    z-index: 1;
    width: 50px;
    min-width: 50px;
    text-align: center;
    overflow: hidden;
}

.spixi-toolbar-row > div:nth-child(1),
.spixi-toolbar-row > div:nth-child(2),
.spixi-toolbar-row > div:nth-child(3) {
    display: table-cell;
    align-items: center;
    justify-content: center;
    height: 56px;
    max-height: 56px;
    vertical-align: middle;
    padding: 0px;
}

.home.spixi-toolbar-row > div:nth-child(1),
.home.spixi-toolbar-row > div:nth-child(2),
.home.spixi-toolbar-row > div:nth-child(3) {
    display: flex;
}

.spixi-toolbar-row.extended {
    padding-top: 12px;
    font-size: 14pt;
}

.spixi-toolbar-row-details {
    padding-right: 15pt;
    font-size: 9pt;
}

.spixi-toolbar-row-unread-indicator {
    display: none;
    border-radius: 10px;
    width: 10px;
    height: 10px;
    box-sizing: border-box;
    background: var(--colors-text-select);
    position: relative;
    margin: -6px auto;
    right: 2px;
}

.unread .spixi-toolbar-row-unread-indicator {
    display: inline-block;
}


.spixi-toolbar-chat-body {
    text-align: left !important;
}

.spixi-toolbar-holder {
    width: 100%;
    height: 56px;
}

.spixi-toolbar-holder.bot {
    width: 100%;
    height: 88px;
}

.spixi-toolbar-holder.extended {
    height: 128px;
}

.spixi-toolbar-holder.extended-main {
    height: 166px;
}

.spixi-toolbar-logo {
    background-image: url('../img/spixilogo.svg');
    width: 80px;
    background-size: 22px 24px !important;
    background-repeat: no-repeat;
    background-position: left center;
    margin: auto;
    padding-left: 24px;
    font-size: 20px !important;
    font-style: normal;
    font-weight: 400;
    line-height: 1;
}

.spixi-toolbar-title {
    display: inline-table;
}

.spixi-toolbar-option {
    box-sizing: border-box;
    font-size: 14px;
    border: 1px solid var(--colors-outline-01);
    border-radius: 10px;
    padding: 4px 12px;
    position: absolute;
    right: 10px;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.spixi-toolbar-option:hover {
    background: rgba(11, 11, 11, 0.5);
    cursor: pointer;
}

.spixi-toolbar-chat-name {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: left;
    display: block;
    font-size: 16px !important;
    height: 20px !important;
    max-height: 20px !important;
    line-height: 1 !important;
    -webkit-text-size-adjust: none;
    text-size-adjust: none;
    margin-right: 36px;
}

.spixi-toolbar-chat-name:hover {
    cursor: pointer;
}

.spixi-toolbar-chat-status {
    font-size: 13px !important;
    font-weight: regular;
    line-height: 15px !important;
    color: #B2CDE5;
    text-align: left;
    display: block;
}
/* ... */

